--- a/src/UI.EmployerPortal.Razor.SharedComponents/Inputs/PhoneNumberField.razor.css
+++ b/src/UI.EmployerPortal.Razor.SharedComponents/Inputs/PhoneNumberField.razor.css
@@ -10,6 +10,10 @@
     flex: 0 0 100px;
 }
 
+.phone-prefix-field .master-text-field label {
+    white-space: nowrap;
+}
+
 .phone-main-field {
     flex: 1;
 }
